2024-FEB-04: add support for configuring optional payload encryption for friends
2024-FEB-05: remove Recorder key for user-device if no longer in configuration.yaml
2024-FEB-05: add support for an optional Recorder Lua script
2024-FEB-06: add Lua cli in order to build examples
2024-FEB-06: preliminary support for configuring sans ACME
2024-FEB-07: replaced apache by nginx+php-fpm for solving safari auth issue
2024-FEB-07: userpub, cardpub utilities for demo
2024-FEB-08: add $SYS/# to mosquitto ACL for _lr
2024-FEB-08: optionally send 'welcome' MQTT location publish to first friend
2024-FEB-09: remove -v from ~/.config/mosquitto_sub
2024-FEB-10: add support for http in otrc; mode is configured to 0 or 3
2024-FEB-10: otrc defaults (for Android) to OSM map
2024-FEB-11: install ansible from pip package (core + needed collections)
2024-FEB-16: otrc gets +follow waypoint
2024-FEB-20: support multiple devices per user
2024-FEB-20: lego enroller / renewer logs to /tmp/lego.log
2024-FEB-20: installing logrotate to ensure mosquitto.log is rotated (config is in place)
2024-FEB-21: otrc files of one user use password of first configured user
2024-FEB-21: remove welcome feature which was cute but just cute
2024-FEB-23: add lua-sec package for lua ssl https
2024-FEB-24: add support for friend-specific MQTT ACLs
2024-FEB-24: add support for mostly removing friend/device (ot-userdel)
2024-FEB-25: add support for user-specific waypoints (#27)
2024-MAR-19: add support for ubuntu 23.10 mantic
2024-MAR-19: fail if bootstrap is not running as root
2024-MAY-28: improve front end URL (/ to /owntracks) (#42)
2024-JUN-16: bump Frontend from v2.12.0 to v2.15.3
2024-JUN-19: configure TLS in Mosquitto only if email (TLS) is defined (#48)
2024-JUL-02: remove UFW firewall (#50)
2024-JUL-26: ot-recorder's unit file override.conf is templated out only if it doesn't yet exist
2024-NOV-17: ensure correct ownership/permissions on mosquitto.{pw,acl} (#66)