@@ -30,3 +30,4 @@
 2024-JUL-02: remove UFW firewall (#50)
 2024-JUL-26: ot-recorder's unit file override.conf is templated out only if it doesn't yet exist
 2024-NOV-17: ensure correct ownership/permissions on mosquitto.{pw,acl} (#66)
+2024-NOV-22: ensure correct ownership of mosquitto.{acl,pw} (#67)
